WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283847
[macOS] Spurious ASSERT fails under WebCore::DictionaryLookup::stringForPDFSelection with empty selection
https://bugs.webkit.org/show_bug.cgi?id=283847
Summary
[macOS] Spurious ASSERT fails under WebCore::DictionaryLookup::stringForPDFSe...
Abrar Rahman Protyasha
Reported
2024-11-30 08:47:11 PST
rdar://128668294
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2024-11-30 08:47:15 PST
The selection string check assert in `DictionaryLookup::stringForPDFSelection()` fails unexpectedly, sometimes, with this signature: ``` Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebCore 0x14d57f0ac WTFCrashWithInfo(int, char const*, char const*, int) 1 com.apple.WebCore 0x14b559ae8 WebCore::DictionaryLookup::stringForPDFSelection(PDFSelection*) 2 com.apple.WebKit 0x1163e5c50 WebKit::UnifiedPDFPlugin::textForImmediateActionHitTestAtPoint(WebCore::FloatPoint const&, WebKit::WebHitTestResultData&) 3 com.apple.WebKit 0x11635cc8c WebKit::PDFPluginBase::performImmediateActionHitTestAtLocation(WebCore::FloatPoint const&, WebKit::WebHitTestResultData&) 4 com.apple.WebKit 0x11701156c WebKit::PluginView::performImmediateActionHitTestAtLocation(WebCore::FloatPoint const&, WebKit::WebHitTestResultData&) const 5 com.apple.WebKit 0x116701994 WebKit::WebPage::performImmediateActionHitTestAtLocation(WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>, WebCore::FloatPoint) ``` Kimmo was able to reliably reproduce this assert with the following reproduction steps: 1.
https://developer.apple.com/metal/Metal-Shading-Language-Specification.pdf
3. Click a link in "Contents", hit the place where there is multiple dots ".........."
Abrar Rahman Protyasha
Comment 2
2024-12-02 03:02:09 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37306
EWS
Comment 3
2024-12-02 14:45:48 PST
Committed
287236@main
(16048339c64a): <
https://commits.webkit.org/287236@main
> Reviewed commits have been landed. Closing PR #37306 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug